// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> empty items click remove 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={true}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> empty items regenerate disabled 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={true}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> empty items regenerate enabled 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={false}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> empty items select all via button click 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={true}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> with a single account deselect by entry 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={false}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> with a single account regenerate all 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={false}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> with a single account remove all 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={false}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={false}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> with a single account select all 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={false}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A%22212V16ECZ4HE%22%2C%227FJS3VY2273L%22%2C740%2C%221995-12-17T03%3A24%3A00.000Z%22%2C%22CSGO%22"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;

exports[`<List> with undefined lastLogon 1`] = `
Array [
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="js-select-button"
    disabled={false}
    onClick={[Function]}
  >
    <Checkbox
      bsClass="checkbox"
      checked={true}
      className="js-select-checkbox"
      disabled={false}
      inline={false}
      title=""
    />
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="danger"
    className="js-remove"
    disabled={false}
    onClick={[Function]}
    title="Remove"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="trash"
    />
     Remove
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="success"
    className="js-regenerate"
    disabled={false}
    onClick={[Function]}
    title="Regenerate Token"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="refresh"
    />
     Regenerate Token
  </Button>,
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="js-csv"
    disabled={false}
    download="gslt.csv"
    href="data:text/csv;charset=UTF-8,﻿%22SteamID%22%2C%22Token%22%2C%22AppID%22%2C%22Last-Logon%22%2C%22Memo%22%0A%22212V16ECZ4HE%22%2C%227FJS3VY2273L%22%2C740%2C%2C%22CSGO%22"
    title="CSV"
  >
    <Glyphicon
      bsClass="glyphicon"
      glyph="download"
    />
     CSV
  </Button>,
]
`;
